<resources>
    <string name="app_name">NanigoAnd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nanigo">NANIGO</string>
    <string name="ok">확인</string>

    <string name="err_internet">인터넷 연결을 확인해주세요.</string>

    <string name="empty">없음없음없음</string>
    <string name="failed">실패했어요</string>

    <string name="onboard_around"><u>둘러보기</u></string>
    <string name="onboard_desc_01">나니고는 일상에서 마주치는 어렵고도 가벼운\n고민들을 질문히고 답변하는 고민해결 서비스입니다.</string>
    <string name="onboard_desc_02">이거할까 저거할까 혼자 고민하지 마시고\n함께하는 나니들의 도움을 받아보세요!</string>
    <string name="onboard_desc_03">다른 나니들의 고민도 있다구요~\n당신의 생각을 솔직하고 빠르게 나니고!</string>
    <!--질문올리기-->
    <string name="question_upload_head">질문올리기</string>
    <string name="question_text_count">글자수 %1$d/53</string>
    <string name="question_q">Q.</string>
    <string name="question_text_hint">질문을 입력하세요.</string>
    <string name="question_image_upload">질문 이미지 (선택)</string>
    <string name="question_type">질문형식 선택</string>
    <string name="type_ox">O/X</string>
    <string name="type_ab">A/B</string>
    <string name="question_upload_button">질문 등록</string>
    <string name="question_ab_txt">텍스트 영역</string>
    <string name="dialog_text">사진 업로드</string>
    <string name="upload_success">질문 업로드 완료</string>
    <string name="upload_fail">질문 업로드 실패!</string>

    <!--질문카드 리스트 보기-->
    <string name="get_list_success">질문카드 리스트 갱신 완료</string>
    <string name="get_list_fail">질문카드 리스트 갱신 실패</string>
    <string name="data_empty">새로고침 중...</string>
    <string name="vote_card_success">결과 선택 완료</string>
    <string name="vote_card_fail">결과 선택 실패!</string>
    <string name="last_card">더 이상 질문카드가 없네요!\고민을 올려주세요</string>

</resources>
